[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moalf"
version = "1.0.0"
description = "Reference reimplementation and reproduction analysis of the MOALF-UAV-MEC paper (IEEE IoT Journal, 2025)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ali A. Al-Bakhrani" },
]
keywords = ["UAV", "MEC", "edge-computing", "multiobjective-optimization", "IoT", "reinforcement-learning"]
dependencies = [
    "numpy==1.26.3",
    "pyyaml==6.0.3",
    "torch==2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moalf = ["py.typed"]
